--- a/index.html
+++ b/index.html
@@ -240,7 +240,15 @@
       }
 
       function domainMatch(tld, domain) {
-        return domain.toUpperCase().endsWith('.' + tld.toUpperCase());
+        if (tld == '' && !domain.includes('.')) {
+          // an empty TLD indicates the root zone, and no dot indicates domain
+          // is a TLD
+          return true;
+
+        } else {
+          return domain.toUpperCase().endsWith('.' + tld.toUpperCase());
+
+        }
       }
 
       function asnMatch(range, asn) {
