use the IANA server for TLDs

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           url = object;
 
         } else if ('tld' == typeval) {
-          url = 'https://root.rdap.org/domain/' + object + queryParams;
+          url = 'https://rdap.iana.org/domain/' + object + queryParams;
 
         } else if ('registrar' == typeval) {
           url = 'https://registrars.rdap.org/entity/' + object + '-IANA' + queryParams;
