--- a/index.html
+++ b/index.html
@@ -1224,6 +1224,9 @@
           <li class="nav-item">
             <a class="nav-link" href="https://deployment.rdap.org/">Deployment Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://validator.rdap.org/">Validator</a>
+          </li>
         </ul>
       </div>
     </nav>
