--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>RDAP Lookup - a private domain name lookup tool</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="module" src="https://about.rdap.org/assets/scaffold.js"></script>
-    <link rel="stylesheet" href="./assets/bootstrap.min.css?v=2021112213" />
-    <link rel="shortcut icon" href="./assets/shortcut-icon.svg?v=2021112213" />
-    <meta name="description" content="A completely private domain name lookup tool using RDAP (the replacement for Whois)" />
-    <meta name="keywords" content="rdap, whois, rdap, domain name, dns, ip address" />
+    <link rel="shortcut icon" href="./assets/shortcut-icon.svg?v=2021112213">
+    <meta name="description" content="A completely private domain name lookup tool using RDAP (the replacement for Whois)">
+    <meta name="keywords" content="rdap, whois, rdap, domain name, dns, ip address">
     <style>
       dd {
         margin: 0.5em 0 1em 2em;
@@ -33,8 +30,8 @@
         padding:0.25em 0 0 0;
       }
     </style>
-    <script src="assets/ipaddr.js/ipaddr.min.js?v=2021122209"></script>
-    <script src="assets/punycode.js/punycode.js?v=2024040213"></script>
+    <script src="./assets/ipaddr.js/ipaddr.min.js?v=2021122209"></script>
+    <script src="./assets/punycode.js/punycode.js?v=2024040213"></script>
     <script>
       // see https://www.iana.org/assignments/rdap-json-values
       var rdapStatusInfo = {
@@ -1226,10 +1223,10 @@
               </select>
             </div>
 
-            <input class="form-control" id="object" type="text" name="object" placeholder="example.com" onkeyup="guessType(this.value)" required/>
+            <input class="form-control" id="object" type="text" name="object" placeholder="example.com" onkeyup="guessType(this.value)" required>
 
             <div class="input-group-append">
-              <input id="button" type="button" value="Submit" onclick="doQuery()" class="btn btn-primary" disabled/>
+              <input id="button" type="button" value="Submit" onclick="doQuery()" class="btn btn-primary" disabled>
             </div>
           </div>
         </div>
