--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
           <div class="input-group">
 
             <div class="input-group-prepend">
-              <select class="custom-select" id="type" name="type" onchange="updatePlaceHolder(this.options[this.selectedIndex].value)">
+              <select class="form-select" id="type" name="type" onchange="updatePlaceHolder(this.options[this.selectedIndex].value)">
                 <option value="domain" selected>Domain</option>
                 <option value="tld">TLD</option>
                 <option value="ip">IP/CIDR</option>
