--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 title: ""
 layout: page
 stylesheets:
-  - ./assets/style.css
+  - ./assets/style.css?v=202407161152
 scripts:
   - ./assets/ipaddr.js/ipaddr.min.js?v=2021122209
   - ./assets/punycode.js/punycode.js?v=2024040213
-  - ./assets/client.js
+  - ./assets/client.js?v=202407161152
 ---
 
 <form onsubmit="doQuery();return false" class="form-inline">
