--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "RDAP Lookup - a private domain name lookup tool"
 layout: page
 stylesheets:
   - ./assets/style.css?v=202407161152
