--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ scripts:
   <li>There is (currently) no bootstrap registry for ICANN-accredited registrars; instead these queries are sent to <a href="https://about.rdap.org/#additional" target="_new">the registrars.rdap.org server.</a>.</li>
   <li>To submit feedback, <a href="mailto:feedback@rdap.org">click here</a>. Please contact the relevant registry or registrar if you have an issue with the content of an RDAP response.</li>
   <li>Found a problem with an RDAP response? You can use the <a href="https://validator.rdap.org">RDAP Validator</a> to check for issues.</li>
-  <li>This tool is Free Software; for the license, <a href="LICENSE">click here</a>. To fork a copy of the git repository, <a rel="noopener" target="_new" href="https://github.com/gbxyz/rdap-web-client">click here</a>.</li>
+  <li>This tool is Free Software; for the license, <a href="LICENSE">click here</a>. To fork a copy of the git repository, <a rel="noopener" target="_new" href="https://github.com/rdap-org/client.rdap.org">click here</a>.</li>
   <li>This page uses <a rel="noopener" target="_new" href="https://github.com/whitequark/ipaddr.js/">ipaddr.js</a> by <a rel="noopener" target="_new" href="https://whitequark.org/">whitequark</a>, and <a rel="noopener" target="_new" href="https://github.com/mathiasbynens/punycode.js">punycode.js</a> by <a rel="noopener" target="_new" href="https://mathiasbynens.be/">Mathias Bynens</a>.</li>
 </ul>
 
